objects/ProductTagMapping__c.object
<CustomObject>
    <fields>
        <fullName>Ecosystem__c</fullName>
        <label>Ecosystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>pcg</fullName>
                </value>
                <value>
                    <fullName>sbg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDataCategoryEdition__c</fullName>
        <label>SFDataCategoryEdition</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDataCategoryPlatform__c</fullName>
        <label>SFDataCategoryPlatform</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDataCategoryProduct__c</fullName>
        <label>SFDataCategoryProduct</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDataCategoryVersion__c</fullName>
        <label>SFDataCategoryVersion</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDataCategory__c</fullName>
        <label>SFDataCategory</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SFDataCategory__c</columns>
        <columns>SFDataCategoryEdition__c</columns>
        <columns>SFDataCategoryPlatform__c</columns>
        <columns>SFDataCategoryProduct__c</columns>
        <columns>SFDataCategoryVersion__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Ecosystem__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>